--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,7 +60,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/masterclass_logo.png
+    - assets/images/
+    - assets/images/2x/
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
