--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   font_awesome_flutter: ^10.4.0
+  material_symbols_icons: ^4.39.5
 
 
   # The following adds the Cupertino Icons font to your application.
