--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   font_awesome_flutter: ^10.4.0
   material_symbols_icons: ^4.39.5
+  feather_icons: ^1.2.0
 
 
   # The following adds the Cupertino Icons font to your application.
