--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
   font_awesome_flutter: ^10.4.0
   material_symbols_icons: ^4.39.5
   feather_icons: ^1.2.0
-
+  flutter_svg: ^2.0.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
